--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "shifu-express",
+  "name": "capatain-adventure",
   "version": "0.0.0",
   "private": true,
   "scripts": {
@@ -14,7 +14,9 @@
     "express": "~4.16.1",
     "express-validator": "^6.9.2",
     "jsonwebtoken": "^8.5.1",
-    "morgan": "~1.9.1"
+    "morgan": "~1.9.1",
+    "mysql2": "^2.2.5",
+    "sequelize": "^6.3.5"
   },
   "devDependencies": {
     "chai": "^4.2.0",
@@ -27,7 +29,8 @@
     "lint-staged": "^10.5.3",
     "mocha": "^8.2.1",
     "nodemon": "^2.0.6",
-    "prettier": "^2.2.1"
+    "prettier": "^2.2.1",
+    "sequelize-cli": "^6.2.0"
   },
   "husky": {
     "hooks": {
