chore: update eslint confitg

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -21,6 +21,8 @@
             }
         ],
         "no-plusplus": "off",
-        "no-underscore-dangle": "off"
+        "no-underscore-dangle": "off",
+        "import/no-dynamic-require" : "off",
+        "global-require" : "off"
     }
 }
