--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -23,6 +23,7 @@
         "no-plusplus": "off",
         "no-underscore-dangle": "off",
         "import/no-dynamic-require" : "off",
-        "global-require" : "off"
+        "global-require" : "off",
+        "radix" :"warn"
     }
 }
