--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "test": "mocha --exit"
   },
   "dependencies": {
+    "bcrypt": "^5.0.0",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "dotenv": "^8.2.0",
