--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,12 @@
+BASEURL=http://localhost:3000/
+FRONTEND_BASEURL=http://localhost:3000/
 JWT_SECRET=AREALLYSECRETKEYDONTTELLANYONE
 DB_NAME=captain_adventure_dev
 DB_HOST=127.0.0.1
 DB_USERNAME=
 DB_PASSWORD=
-SALT_ROUNDS=10
+SALT_ROUNDS=
+SMTP_SERVICE=SendinBlue
+SMTP_SECURE=
+SMTP_USERNAME=
+SMTP_PASSWORD=
