--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "capatain-adventure",
+  "name": "captain-adventure",
   "version": "0.0.0",
   "private": true,
   "scripts": {
@@ -16,6 +16,7 @@
     "express-validator": "^6.9.2",
     "jsonwebtoken": "^8.5.1",
     "morgan": "~1.9.1",
+    "multer": "^1.4.2",
     "mysql2": "^2.2.5",
     "nodemailer": "^6.4.17",
     "sequelize": "^6.3.5"
