--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "dotenv": "^8.2.0",
     "express": "~4.16.1",
     "express-validator": "^6.9.2",
+    "fs-extra": "^9.0.1",
     "jsonwebtoken": "^8.5.1",
     "morgan": "~1.9.1",
     "multer": "^1.4.2",
