--- a/.gitignore
+++ b/.gitignore
@@ -35,7 +35,6 @@ build/Release
 # Dependency directories
 node_modules/
 jspm_packages/
-public/avatars
 
 # Typescript v1 declaration files
 typings/
@@ -60,3 +59,6 @@ typings/
 
 # next.js build output
 .next
+
+# static file
+public/avatar/
