--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "bcrypt": "^5.0.0",
     "cookie-parser": "~1.4.4",
+    "cors": "^2.8.5",
     "debug": "~2.6.9",
     "dotenv": "^8.2.0",
     "express": "~4.16.1",
@@ -20,7 +21,8 @@
     "multer": "^1.4.2",
     "mysql2": "^2.2.5",
     "nodemailer": "^6.4.17",
-    "sequelize": "^6.3.5"
+    "sequelize": "^6.3.5",
+    "slugify": "^1.4.6"
   },
   "devDependencies": {
     "chai": "^4.2.0",
