feat: fix category, users add create packet end point

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -24,6 +24,7 @@
         "no-underscore-dangle": "off",
         "import/no-dynamic-require" : "off",
         "global-require" : "off",
-        "radix" :"warn"
+        "radix" :"warn",
+        "camelcase":"warn"
     }
 }
