--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -25,6 +25,6 @@
         "import/no-dynamic-require" : "off",
         "global-require" : "off",
         "radix" :"warn",
-        "camelcase":"warn"
+        "camelcase":"off"
     }
 }
