--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "start": "node ./bin/www",
     "dev": "nodemon ./bin/www",
     "test": "NODE_ENV=test npm run db-reset && mocha --exit",
-    "db-reset" : "npx sequelize-cli db:drop && npx sequelize-cli db:create && npx sequelize-cli db:migrate:undo:all && npx sequelize-cli db:migrate && npx sequelize-cli db:seed:all"
+    "db-reset": "npx sequelize-cli db:drop && npx sequelize-cli db:create && npx sequelize-cli db:migrate:undo:all && npx sequelize-cli db:migrate && npx sequelize-cli db:seed:all"
   },
   "dependencies": {
     "bcrypt": "^5.0.0",
@@ -15,6 +15,7 @@
     "debug": "~2.6.9",
     "dotenv": "^8.2.0",
     "express": "~4.16.1",
+    "express-session": "^1.17.1",
     "express-validator": "^6.9.2",
     "fs-extra": "^9.0.1",
     "jsonwebtoken": "^8.5.1",
@@ -23,7 +24,8 @@
     "mysql2": "^2.2.5",
     "nodemailer": "^6.4.17",
     "sequelize": "^6.3.5",
-    "slugify": "^1.4.6"
+    "slugify": "^1.4.6",
+    "svg-captcha": "^1.4.0"
   },
   "devDependencies": {
     "chai": "^4.2.0",
