--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,10 +1,11 @@
 version: '3.8'
 services:
   captain_api:
-    image: node:14.16.0
+    restart: always
+    image: node:14.16.0-alpine
     command:
-      sh -c "NODE_ENV=production npm install --production && npm run db-reset &&
-      npm start"
+      sh -c "NODE_ENV=production npm install --production && npm run db:migrate
+      && npm start"
     ports:
       - 3000:3000
     working_dir: /app
@@ -13,8 +14,9 @@ services:
     depends_on:
       - 'captain_db'
   captain_db:
+    restart: always
     image: mysql:5.7
     volumes:
-      - /home/db/captain-database:/var/lib/mysql
+      - $HOME/db/captain-adventure/data:/var/lib/mysql
     environment:
       MYSQL_ROOT_PASSWORD: alfatih1453
