--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,7 @@
 BASEURL=http://localhost:3000/
 FRONTEND_BASEURL=http://localhost:3000/
 JWT_SECRET=AREALLYSECRETKEYDONTTELLANYONE
+PORT=3000
 DB_NAME=captain_adventure_dev
 DB_HOST=127.0.0.1
 DB_USERNAME=
